// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Please 1`] = `
<div>
  Login Please
</div>
`;

exports[`Validate github token with backend successfully 1`] = `
<div>
  Logging In
</div>
`;
